samples/_failures_safe/1761632292_d01685_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3fdf044.c: In function ‘main’:
./samples/SAFE/__tmp_d3fdf044.c:136:9: error: expected declaration or statement at end of input
  136 |         fprintf(stderr, "Decompression verification failed\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_d3fdf044.c:136:9: error: expected declaration or statement at end of input
